# hackathon-houses

./: .gitignore  README.md  pyproject.toml
src/: model.py  train.py
